--- a/resources/frontend/app/package.json
+++ b/resources/frontend/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "buefy": "^0.8.20",
+    "bulma": "^0.9.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
