--- a/resources/frontend/app/package.json
+++ b/resources/frontend/app/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.9.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
