--- a/resources/frontend/app/package.json
+++ b/resources/frontend/app/package.json
@@ -13,6 +13,8 @@
     "buefy": "^0.8.20",
     "bulma": "^0.9.0",
     "core-js": "^2.6.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2",
     "vue": "^2.6.10",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.0.3",
