--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
-
+# -- APPLICATION CONFIGURATION --
+URL_ENFORCE_SSL=false
+USER_REGISTRATION_DISABLED=false
+# -------------------------------
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
